lfr/antlrgen/reggie/reggieParser.py
# Generated from ./reggie.g4 by ANTLR 4.10.1
# encoding: utf-8
import sys
from io import StringIO

from antlr4 import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class reggieParser(Parser):
    grammarFileName = "reggie.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'{'",
        "','",
        "'}'",
        "'('",
        "')'",
        "':'",
        "'['",
        "']'",
        "'*'",
        "'+'",
        "'|'",
        "'->'",
        "'<->'",
        "<INVALID>",
        "'?'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "ID",
        "QUESTIONMARK_WILDCARD",
        "WS",
        "NL",
        "INT",
        "STRING",
    ]

    RULE_graph = 0
    RULE_graphstatement = 1
    RULE_statementmodifier = 2
    RULE_basestatement = 3
    RULE_subgraph = 4
    RULE_vertex = 5
    RULE_coloringfilter = 6
    RULE_structuralvertexpattern = 7
    RULE_intmodifier = 8
    RULE_starmodifier = 9
    RULE_plusmodifier = 10
    RULE_structuralid = 11
    RULE_labelfilter = 12
    RULE_label = 13
    RULE_vertex2vertex = 14
    RULE_edge = 15

    ruleNames = [
        "graph",
        "graphstatement",
        "statementmodifier",
        "basestatement",
        "subgraph",
        "vertex",
        "coloringfilter",
        "structuralvertexpattern",
        "intmodifier",
        "starmodifier",
        "plusmodifier",
        "structuralid",
        "labelfilter",
        "label",
        "vertex2vertex",
        "edge",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    ID = 14
    QUESTIONMARK_WILDCARD = 15
    WS = 16
    NL = 17
    INT = 18
    STRING = 19

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class GraphContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def graphstatement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(reggieParser.GraphstatementContext)
            else:
                return self.getTypedRuleContext(reggieParser.GraphstatementContext, i)

        def getRuleIndex(self):
            return reggieParser.RULE_graph

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterGraph"):
                listener.enterGraph(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitGraph"):
                listener.exitGraph(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitGraph"):
                return visitor.visitGraph(self)
            else:
                return visitor.visitChildren(self)

    def graph(self):
        localctx = reggieParser.GraphContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_graph)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(reggieParser.T__0)
            self.state = 33
            self.graphstatement()
            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == reggieParser.T__1:
                self.state = 34
                self.match(reggieParser.T__1)
                self.state = 35
                self.graphstatement()
                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 41
            self.match(reggieParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GraphstatementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def basestatement(self):
            return self.getTypedRuleContext(reggieParser.BasestatementContext, 0)

        def statementmodifier(self):
            return self.getTypedRuleContext(reggieParser.StatementmodifierContext, 0)

        def getRuleIndex(self):
            return reggieParser.RULE_graphstatement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterGraphstatement"):
                listener.enterGraphstatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitGraphstatement"):
                listener.exitGraphstatement(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitGraphstatement"):
                return visitor.visitGraphstatement(self)
            else:
                return visitor.visitChildren(self)

    def graphstatement(self):
        localctx = reggieParser.GraphstatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_graphstatement)
        try:
            self.state = 49
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [reggieParser.ID, reggieParser.QUESTIONMARK_WILDCARD]:
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.basestatement()
                pass
            elif token in [reggieParser.T__3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 44
                self.match(reggieParser.T__3)
                self.state = 45
                self.basestatement()
                self.state = 46
                self.match(reggieParser.T__4)
                self.state = 47
                self.statementmodifier()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementmodifierContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def intmodifier(self):
            return self.getTypedRuleContext(reggieParser.IntmodifierContext, 0)

        def plusmodifier(self):
            return self.getTypedRuleContext(reggieParser.PlusmodifierContext, 0)

        def starmodifier(self):
            return self.getTypedRuleContext(reggieParser.StarmodifierContext, 0)

        def getRuleIndex(self):
            return reggieParser.RULE_statementmodifier

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStatementmodifier"):
                listener.enterStatementmodifier(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStatementmodifier"):
                listener.exitStatementmodifier(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStatementmodifier"):
                return visitor.visitStatementmodifier(self)
            else:
                return visitor.visitChildren(self)

    def statementmodifier(self):
        localctx = reggieParser.StatementmodifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statementmodifier)
        try:
            self.state = 54
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [reggieParser.T__6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.intmodifier()
                pass
            elif token in [reggieParser.T__9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.plusmodifier()
                pass
            elif token in [reggieParser.T__8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 53
                self.starmodifier()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BasestatementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subgraph(self):
            return self.getTypedRuleContext(reggieParser.SubgraphContext, 0)

        def vertex2vertex(self):
            return self.getTypedRuleContext(reggieParser.Vertex2vertexContext, 0)

        def vertex(self):
            return self.getTypedRuleContext(reggieParser.VertexContext, 0)

        def getRuleIndex(self):
            return reggieParser.RULE_basestatement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBasestatement"):
                listener.enterBasestatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBasestatement"):
                listener.exitBasestatement(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBasestatement"):
                return visitor.visitBasestatement(self)
            else:
                return visitor.visitChildren(self)

    def basestatement(self):
        localctx = reggieParser.BasestatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_basestatement)
        try:
            self.state = 59
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 3, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.subgraph()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.vertex2vertex()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 58
                self.vertex()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SubgraphContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vertex2vertex(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(reggieParser.Vertex2vertexContext)
            else:
                return self.getTypedRuleContext(reggieParser.Vertex2vertexContext, i)

        def ID(self):
            return self.getToken(reggieParser.ID, 0)

        def getRuleIndex(self):
            return reggieParser.RULE_subgraph

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSubgraph"):
                listener.enterSubgraph(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSubgraph"):
                listener.exitSubgraph(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSubgraph"):
                return visitor.visitSubgraph(self)
            else:
                return visitor.visitChildren(self)

    def subgraph(self):
        localctx = reggieParser.SubgraphContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_subgraph)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(reggieParser.ID)
            self.state = 62
            self.match(reggieParser.T__5)
            self.state = 64
            self.match(reggieParser.T__0)
            self.state = 65
            self.vertex2vertex()
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == reggieParser.T__1:
                self.state = 66
                self.match(reggieParser.T__1)
                self.state = 67
                self.vertex2vertex()
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 73
            self.match(reggieParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VertexContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def structuralid(self):
            return self.getTypedRuleContext(reggieParser.StructuralidContext, 0)

        def labelfilter(self):
            return self.getTypedRuleContext(reggieParser.LabelfilterContext, 0)

        def coloringfilter(self):
            return self.getTypedRuleContext(reggieParser.ColoringfilterContext, 0)

        def structuralvertexpattern(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    reggieParser.StructuralvertexpatternContext
                )
            else:
                return self.getTypedRuleContext(
                    reggieParser.StructuralvertexpatternContext, i
                )

        def getRuleIndex(self):
            return reggieParser.RULE_vertex

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVertex"):
                listener.enterVertex(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVertex"):
                listener.exitVertex(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitVertex"):
                return visitor.visitVertex(self)
            else:
                return visitor.visitChildren(self)

    def vertex(self):
        localctx = reggieParser.VertexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vertex)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.structuralid()
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == reggieParser.T__5:
                self.state = 76
                self.match(reggieParser.T__5)
                self.state = 77
                self.labelfilter()

            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == reggieParser.T__0:
                self.state = 80
                self.coloringfilter()

            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and (
                (1 << _la)
                & (
                    (1 << reggieParser.T__6)
                    | (1 << reggieParser.T__8)
                    | (1 << reggieParser.T__9)
                )
            ) != 0:
                self.state = 83
                self.structuralvertexpattern()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ColoringfilterContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i: int = None):
            if i is None:
                return self.getTokens(reggieParser.STRING)
            else:
                return self.getToken(reggieParser.STRING, i)

        def getRuleIndex(self):
            return reggieParser.RULE_coloringfilter

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterColoringfilter"):
                listener.enterColoringfilter(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitColoringfilter"):
                listener.exitColoringfilter(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitColoringfilter"):
                return visitor.visitColoringfilter(self)
            else:
                return visitor.visitChildren(self)

    def coloringfilter(self):
        localctx = reggieParser.ColoringfilterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_coloringfilter)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(reggieParser.T__0)
            self.state = 90
            self.match(reggieParser.STRING)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == reggieParser.T__1:
                self.state = 91
                self.match(reggieParser.T__1)
                self.state = 92
                self.match(reggieParser.STRING)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.match(reggieParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StructuralvertexpatternContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def intmodifier(self):
            return self.getTypedRuleContext(reggieParser.IntmodifierContext, 0)

        def starmodifier(self):
            return self.getTypedRuleContext(reggieParser.StarmodifierContext, 0)

        def plusmodifier(self):
            return self.getTypedRuleContext(reggieParser.PlusmodifierContext, 0)

        def getRuleIndex(self):
            return reggieParser.RULE_structuralvertexpattern

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStructuralvertexpattern"):
                listener.enterStructuralvertexpattern(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStructuralvertexpattern"):
                listener.exitStructuralvertexpattern(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStructuralvertexpattern"):
                return visitor.visitStructuralvertexpattern(self)
            else:
                return visitor.visitChildren(self)

    def structuralvertexpattern(self):
        localctx = reggieParser.StructuralvertexpatternContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 14, self.RULE_structuralvertexpattern)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [reggieParser.T__6]:
                self.state = 100
                self.intmodifier()
                pass
            elif token in [reggieParser.T__8]:
                self.state = 101
                self.starmodifier()
                pass
            elif token in [reggieParser.T__9]:
                self.state = 102
                self.plusmodifier()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IntmodifierContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(reggieParser.INT, 0)

        def getRuleIndex(self):
            return reggieParser.RULE_intmodifier

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterIntmodifier"):
                listener.enterIntmodifier(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitIntmodifier"):
                listener.exitIntmodifier(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitIntmodifier"):
                return visitor.visitIntmodifier(self)
            else:
                return visitor.visitChildren(self)

    def intmodifier(self):
        localctx = reggieParser.IntmodifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_intmodifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(reggieParser.T__6)
            self.state = 106
            self.match(reggieParser.INT)
            self.state = 107
            self.match(reggieParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StarmodifierContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return reggieParser.RULE_starmodifier

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStarmodifier"):
                listener.enterStarmodifier(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStarmodifier"):
                listener.exitStarmodifier(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStarmodifier"):
                return visitor.visitStarmodifier(self)
            else:
                return visitor.visitChildren(self)

    def starmodifier(self):
        localctx = reggieParser.StarmodifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_starmodifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(reggieParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PlusmodifierContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return reggieParser.RULE_plusmodifier

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPlusmodifier"):
                listener.enterPlusmodifier(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPlusmodifier"):
                listener.exitPlusmodifier(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPlusmodifier"):
                return visitor.visitPlusmodifier(self)
            else:
                return visitor.visitChildren(self)

    def plusmodifier(self):
        localctx = reggieParser.PlusmodifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_plusmodifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(reggieParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StructuralidContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(reggieParser.ID, 0)

        def QUESTIONMARK_WILDCARD(self):
            return self.getToken(reggieParser.QUESTIONMARK_WILDCARD, 0)

        def getRuleIndex(self):
            return reggieParser.RULE_structuralid

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStructuralid"):
                listener.enterStructuralid(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStructuralid"):
                listener.exitStructuralid(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStructuralid"):
                return visitor.visitStructuralid(self)
            else:
                return visitor.visitChildren(self)

    def structuralid(self):
        localctx = reggieParser.StructuralidContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_structuralid)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            _la = self._input.LA(1)
            if not (
                _la == reggieParser.ID or _la == reggieParser.QUESTIONMARK_WILDCARD
            ):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LabelfilterContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def label(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(reggieParser.LabelContext)
            else:
                return self.getTypedRuleContext(reggieParser.LabelContext, i)

        def getRuleIndex(self):
            return reggieParser.RULE_labelfilter

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLabelfilter"):
                listener.enterLabelfilter(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLabelfilter"):
                listener.exitLabelfilter(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLabelfilter"):
                return visitor.visitLabelfilter(self)
            else:
                return visitor.visitChildren(self)

    def labelfilter(self):
        localctx = reggieParser.LabelfilterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_labelfilter)
        self._la = 0  # Token type
        try:
            self.state = 134
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [reggieParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.label()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == reggieParser.T__10:
                    self.state = 116
                    self.match(reggieParser.T__10)
                    self.state = 117
                    self.label()
                    self.state = 122
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [reggieParser.T__3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.match(reggieParser.T__3)
                self.state = 124
                self.label()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == reggieParser.T__10:
                    self.state = 125
                    self.match(reggieParser.T__10)
                    self.state = 126
                    self.label()
                    self.state = 131
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 132
                self.match(reggieParser.T__4)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LabelContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(reggieParser.ID, 0)

        def getRuleIndex(self):
            return reggieParser.RULE_label

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLabel"):
                listener.enterLabel(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLabel"):
                listener.exitLabel(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLabel"):
                return visitor.visitLabel(self)
            else:
                return visitor.visitChildren(self)

    def label(self):
        localctx = reggieParser.LabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_label)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(reggieParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Vertex2vertexContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vertex(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(reggieParser.VertexContext)
            else:
                return self.getTypedRuleContext(reggieParser.VertexContext, i)

        def edge(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(reggieParser.EdgeContext)
            else:
                return self.getTypedRuleContext(reggieParser.EdgeContext, i)

        def getRuleIndex(self):
            return reggieParser.RULE_vertex2vertex

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVertex2vertex"):
                listener.enterVertex2vertex(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVertex2vertex"):
                listener.exitVertex2vertex(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitVertex2vertex"):
                return visitor.visitVertex2vertex(self)
            else:
                return visitor.visitChildren(self)

    def vertex2vertex(self):
        localctx = reggieParser.Vertex2vertexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_vertex2vertex)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.vertex()
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == reggieParser.T__11 or _la == reggieParser.T__12:
                self.state = 139
                self.edge()
                self.state = 140
                self.vertex()
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EdgeContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return reggieParser.RULE_edge

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterEdge"):
                listener.enterEdge(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitEdge"):
                listener.exitEdge(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitEdge"):
                return visitor.visitEdge(self)
            else:
                return visitor.visitChildren(self)

    def edge(self):
        localctx = reggieParser.EdgeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_edge)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            _la = self._input.LA(1)
            if not (_la == reggieParser.T__11 or _la == reggieParser.T__12):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
